# flask-realworld-example-app

./: .gitignore  .travis.yml  Conduit.postman_collection.json  Jenkinsfile  LICENSE  Pipfile  Procfile  README.rst  Vagrantfile  autoapp.py  dev.db  pyproject.toml
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
conduit/: app.py  commands.py  database.py  exceptions.py  extensions.py  settings.py  utils.py
conduit/articles/: __init__.py  models.py  serializers.py  views.py
conduit/docs/: create_category.yml  delete_category.yml  edit_category.yml  fetch_categories.yml
conduit/profile/: __init__.py  models.py  serializers.py  views.py
conduit/user/: models.py  serializers.py  views.py
migrations/versions/: 048a1c70d463_.py  a9654ed747ab_.py  c89ffc5973dd_.py  fbe37d815466_.py
requirements/: dev.txt  prod.txt
tests/: conftest.py  factories.py  test_articles.py  test_authentication.py  test_categories.py  test_config.py  test_model_category.py  test_models.py  test_profile.py
