[tool.poetry]
name = "Flask Realworld Example App"
version = "1.0.0"
description = "A Flask real world example API for realworld.io"
authors = ["Mohamed Aziz Knani <medazizknani@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
werkzeug = "0.14.1"
sqlalchemy = "1.2.10"
click = "6.7"
marshmallow = "2.15.3"
flask-apispec = "0.7.0"
unicode-slugify = "0.1.3"
psycopg2 = "2.7.5"
gunicorn = "19.9.0"
Flask-Caching = "1.4.0"
Flask-SQLAlchemy = "2.3.2"
Flask-Bcrypt = "0.7.1"
Flask = "1.0.2"
PyJWT = "1.6.4"
Flask-JWT-Extended = "3.12.0"
Flask-Migrate = "2.2.1"
Flask-Cors = "3.0.6"

[tool.poetry.dev-dependencies]
# Testing
pytest = "3.6.3"
WebTest = "2.0.30"
factory-boy = "2.11.1"
# For python 3
Faker = "0.8.17"
